apply comments